# game_field

./: .gitignore  CMakeLists.txt  README.md  test_cmd.cpp  test_gl.cpp  test_tk.cpp
docs/: apache2_webdav_configure.md
examples/: CMakeLists.txt  chat_client.cpp  chat_server.cpp
manga_viewer/: CMakeLists.txt  README.md  app.cpp  app.hpp  io.cpp  main.cpp  pdf_utils.py
network/: CMakeLists.txt  config.h.in  img.cpp  mnist.hpp
python/: contact_phase.py  inertial_blending.py  interact_concate_clips.py  interact_postprocess.py  mb_retarget.py  persona_vis_traj.py
python/arfriend_data/: mb_retarget.py
python/blender/: armature_to_mesh.py  format_mixamo_rig.py  persona_batch_rendering.py
python/dataset/: InterAct.py  Lafan1.py  MotionPersona.py
python/utils/: bvh_motion.py  motion_from_fk.py  motion_modules.py  nn_transforms.py
scripts/: mesh_modify.cpp  mesh_modify.hpp  mixamo_manipulate.hpp  persona_compare.hpp  spring_damper.hpp  vis_frustom_bbs.cpp  vis_frustom_bbs.hpp  vis_point_sequence.hpp
toolkit/: CMakeLists.txt  README.md
toolkit/toolkit/: math.cpp  math.hpp  reflect.hpp  scriptable.hpp  system.cpp  system.hpp  transform.cpp  transform.hpp  utils.cpp  utils.hpp
toolkit/toolkit/anim/: anim_system.cpp  anim_system.hpp
toolkit/toolkit/anim/components/: actor.cpp  actor.hpp
toolkit/toolkit/anim/scripts/: player.hpp  vis.cpp  vis.hpp
toolkit/toolkit/assets/: cube.cpp  cylinder.cpp  fonts.hpp  icons_lucide.h  plane.cpp  primitives.hpp  sphere.cpp
toolkit/toolkit/loaders/: assimp_loading.cpp  image.cpp  image.hpp  imp.cpp  imp.hpp  mesh.cpp  mesh.hpp  motion.cpp  motion.hpp
toolkit/toolkit/opengl/: base.cpp  base.hpp  draw.cpp  draw.hpp  editor.cpp  editor.hpp  imp.hpp  loader_assimp.cpp  loader_ufbx.cpp
toolkit/toolkit/opengl/assets/: cube.cpp  cylinder.cpp  inconsolata.cpp  inconsolata.hpp  plane.cpp  sphere.cpp
toolkit/toolkit/opengl/components/: assimp.cpp  camera.hpp  geometry.cpp  imp.cpp  lights.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp
toolkit/toolkit/opengl/components/materials/: all.hpp  blinn_phong.hpp
toolkit/toolkit/opengl/compute/: tools.cpp  tools.hpp
toolkit/toolkit/opengl/effects/: ambient_occlusion.cpp  ambient_occlusion.hpp  atmosphere.cpp  atmosphere.hpp  sky.cpp  sky.hpp
toolkit/toolkit/opengl/gui/: utils.cpp  utils.hpp
toolkit/toolkit/opengl/rasterize/: kernal.cpp  kernal.hpp  mixed.cpp  mixed.hpp  shaders.cpp  shaders.hpp
toolkit/toolkit/opengl/scripts/: camera.cpp  camera.hpp  test_draw.cpp  test_draw.hpp
toolkit/toolkit/physics/: system.cpp  system.hpp
