cmake_minimum_required(VERSION 3.20)

project(toolkit)
set(CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_STANDARD 20)

add_subdirectory("toolkit/deps/cnpy")
add_subdirectory("toolkit/deps/tinyfd")
add_subdirectory("toolkit/deps/ufbx")
add_subdirectory("toolkit/deps/zlib_embed")
add_subdirectory("toolkit/deps/glad")
add_subdirectory("toolkit/deps/glfw")
add_subdirectory("toolkit/deps/spdlog")
add_subdirectory("toolkit/deps/imgui")

if(MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:preprocessor /bigobj" CACHE STRING "" FORCE)
endif()

set(SRC_DIR_LIST "toolkit/loaders" "toolkit/opengl" "toolkit/anim" "toolkit/assets")
set(LIB_LIST )
file(GLOB SRC_FILES "toolkit/*.cpp")
foreach(DIR ${SRC_DIR_LIST})
  file(GLOB_RECURSE CPP_FILES "${DIR}/*.cpp")
  list(APPEND SRC_FILES ${CPP_FILES})
endforeach()

add_library(${PROJECT_NAME} ${SRC_FILES})
target_link_libraries(${PROJECT_NAME} PUBLIC  cnpy zlib ufbx tinyfd glad glfw spdlog::spdlog imgui)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR} "toolkit/deps/headers")
